# STM32L0_SimpleNN

./: .gitignore  Cargo.toml  readme.md
src/: helpers.rs  main.rs  model.rs  nn_lib.rs
